Update index.html Anf add yputube widgets

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-
+<!-- navbar widget -->
 <div data-key="Dark Mega Menu" class="ft" id="ftly084gq">
  </div>
  <script src="https://wdg.fouita.com/widgets/0x25428b.js"></script>
+ 
+<!-- YouTube videos widget -->
+ <div data-key="Youtube Channel Feed" class="ft" id="ft0pbdrh7">
+ </div>
+ <script src="https://wdg.fouita.com/widgets/0x2542db.js"></script>
  
