Update index.html code and add blogs grid

--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
  </div>
  <script src="https://wdg.fouita.com/widgets/0x2542db.js"></script>
  
+<!-- blogs grid -->
+
+ <div data-key="Grid RSS Feed " class="ft" id="ftgxb0gxp">
+ </div>
+ <script src="https://wdg.fouita.com/widgets/0x25432c.js"></script>
+ 
