Update index.html And add newsletter popup

--- a/index.html
+++ b/index.html
@@ -14,3 +14,9 @@
  </div>
  <script src="https://wdg.fouita.com/widgets/0x25432c.js"></script>
  
+<!-- popup newsletter subscription -->
+
+ <div data-key="Subscribe Popup Simple" class="ft" id="ft85hej91">
+ </div>
+ <script src="https://wdg.fouita.com/widgets/0x2543b0.js"></script>
+ 
