Update index.html code and add translation widget

--- a/index.html
+++ b/index.html
@@ -20,3 +20,9 @@
  </div>
  <script src="https://wdg.fouita.com/widgets/0x2543b0.js"></script>
  
+<!-- translation widget -->
+
+ <div data-key="Website Translator" class="ft" id="ft86l6ogm">
+ </div>
+ <script src="https://wdg.fouita.com/widgets/0x2543f0.js"></script>
+ 
