Update index.html code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <div data-key="Dark Mega Menu" class="ft" id="ftly084gq">
  </div>
  <script src="https://wdg.fouita.com/widgets/0x25428b.js"></script>
- 
+ &nbsp; <br> &nbsp; <br> &nbsp; <br> &nbsp; <br>
 <!-- YouTube videos widget -->
  <div data-key="Youtube Channel Feed" class="ft" id="ft0pbdrh7">
  </div>
